change file name

--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
 
 <body>
   <div class="container" id="top">
-   <header>
-      <a href="#home" >
-        <img src="./assets/images/logo.webp" alt="Logo" class="logo">
-      </a>
-
+       <header>
+      <a href="#home"><img src="./assets/images/logo.webp" alt="Logo" class="logo"></a>
       <nav>
         <div class="nav-links" id="navLinks">
-          <span class="menu-close" id="menuClose">✕</span>
           <a href="#home">Home</a>
           <a href="#ownership">Ownership</a>
           <a href="#teams">Teams</a>
@@ -30,11 +26,9 @@
           <a href="#contact">Contact</a>
           <a href="#download" class="cta-nav">Download App</a>
         </div>
-
         <button class="menu-btn" id="menuBtn" aria-expanded="false" aria-controls="navLinks">
           <i class="fas fa-bars"></i>
         </button>
-
         <div id="menuOverlay" class="menu-overlay"></div>
       </nav>
     </header>
