--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NSBLPA — The Future of Sales & Sports</title>
+  <!--================= Favicon =================-->
+ <link rel="apple-touch-icon" href="assets/images/fav.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav.png">
   <meta name="description"
     content="NSBLPA responsive prototype — Ownership, Teams, Apps, Contact, and SalesBets Athlete section.">
+  <!--================= Google Fonts =================-->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <!--================= Font Awesome 5 CSS =================-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!--================= Main Stylesheet =================-->
   <link rel="stylesheet" href="./assets/style.css">
 </head>
 
